# mff

C/: 5.c  Makefile  libtest.c
C/_/: 1.c  1.md  list_tpl.t  tpltools.h  vector.h  vector.t  vector_void.h
C/libs/: Makefile
C/libs/inc/: min.h
C/libs/src/: min.c
Cynth/: CMakeLists.txt
CynthProject/: def.h  lang  proj  proj.c  templates  test  test.c
DAP/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
DAP/inc/: bytewise.hpp  iterators.hpp  type_config.hpp
DAP/inc/asio/: buffer.hpp  driver.hpp  error_handler.hpp  sample_types.hpp  types.hpp
DAP/src/: entry.cpp
DAP/tmp/: __bitwise.hpp  __compile_time.hpp  __system.hpp
DAP/tmp/__pollyfills/: container_traits.hpp  detector.hpp  ranges.hpp
Haskell/: fluid.js  hwkulikov.html  hwx.md  lang.eric  monads.html
Haskell/hw0/: Kulikov0.cabal  Kulikov0.hs  LICENSE
Haskell/hw1/: Kulikov1.cabal  Kulikov1.hs
Haskell/hw2/: Kulikov2.cabal  Kulikov2.hs  PrettySlepys.hs  Slepys.hs  SlepysLexer.hs  SlepysParser.hs  SlepysVars.hs  Tools.hs  test.sl
ML/: d.r  f.r  g.r  hw.r  lreg  mov.r  notes.md  t.md  test.r  trees.r  x.r
ML/hw1/: kulikov_maximilian_hw1.r  results
ML/hw2/: a.r  b.r  kulikov_maximilian_hw2.r
ML/hw3/: .s.r.swp  <CL>  s.r
Proj/: spec.md
Web/hw1/: all.css  howisitmade.html  index.html  order.html
Web/hw2/: form.html
Web/hw3/: style.css
Web/hw4/: solution.php
Web/hw5/: 01-sample.out  index.php  solution.php  solution__.php
Web/hw6/: index.php
Web/hw7/: index.php  router.php
Web/hw8/: index.php
